--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     },
     "require" : {
-        "php-amqplib/php-amqplib" : ">=2.6.1"
+        "php-amqplib/php-amqplib" : ">=2.6.1",
+        "php": ">=7.2.0"
     }
 }
